@@ -304,9 +304,9 @@ out.
 .B --ftp-regular
 Use regular (PORT) data connections.
 .TP
-.BI "--gmail-mailbox " option
+.BI "--imap-mailbox " option
 Allows you to specify a different mailbox.  The default is
-"[Gmail]/All Mail".
+"INBOX".
 Other languages may require a different mailbox than the default.
 .TP
 .BI "--gpg-options " options
@@ -504,7 +504,9 @@ scp://user[:password]@other.host[:port]/some_dir
 .PP
 ftp://user[:password]@other.host[:port]/some_dir
 .PP
-gmail://user[:password]@gmail.com[/from_address_prefix]
+imap://user[:password]@host.com[/from_address_prefix]
+.PP
+imaps://user[:password]@host.com[/from_address_prefix]
 .PP
 hsi://user[:password]@other.host/some_dir
 .PP
@@ -914,15 +916,14 @@ writing it is unclear to what extent this is an expected feature of
 Amazon S3, but in practice you may experience timeouts, socket errors
 or HTTP errors when trying to upload files to your newly created
 bucket. Give it a few minutes and the bucket should function normally.
-.SH GMAIL
-A Gmail account can be used as a target for the upload.  The userid may
-be specified and the password will be requested.  The --volsize must remain
-less than 20 (meg) as that is the (current) maximum attachment size.
+.SH IMAP
+An Imap account can be used as a target for the upload.  The userid may
+be specified and the password will be requested.
 .PP
 The
 .B from_address_prefix
 may be specified (and probably should be). The text will be used as
-the "From" address in Gmail.  Then on a restore (or list) command
+the "From" address in the imap server.  Then on a restore (or list) command
 the
 .B from_address_prefix
 will distinguish between different backups.
